--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "letmeask",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://junicola.github.io/letmeask/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -12,6 +13,7 @@
     "@types/react-dom": "^17.0.0",
     "classnames": "^2.3.1",
     "firebase": "^8.6.8",
+    "gh-pages": "^3.2.3",
     "node-sass": "^5.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -24,7 +26,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
