--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,10 @@
 .env.development.local
 .env.test.local
 .env.production.local
+.firebaserc
+database.rules.json
+firebase.json
+.firebase
 
 npm-debug.log*
 yarn-debug.log*
