--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "letmeask",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://junicola.github.io/letmeask/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -13,7 +12,7 @@
     "@types/react-dom": "^17.0.0",
     "classnames": "^2.3.1",
     "firebase": "^8.6.8",
-    "gh-pages": "^3.2.3",
+    "firebase-tools": "^9.14.0",
     "node-sass": "^5.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -26,9 +25,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
